@startuml

title __UI's Class Diagram__\n

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.Bridge {
          ~ addDirectory()
          ~ newCollection()
          ~ removeCollection()
          ~ removeDirectory()
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.Controller {
          # gridPane : GridPane
          {static} ~ COLUMN_COUNT : int
          {static} ~ SPACE : Text
          ~ collection_count : int
          + initialize()
          - addDirectory()
          - insertPayload()
          - newCollection()
          - redraw()
          - removeCollection()
          - removeDirectory()
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.UI {
          + run()
          + start()
      }
    }
  }
  

  com.olexyn.ensync.ui.Controller .up.|> javafx.fxml.Initializable
  com.olexyn.ensync.ui.Controller o-- com.olexyn.ensync.ui.Bridge : bridge
  com.olexyn.ensync.ui.UI .up.|> java.lang.Runnable
  com.olexyn.ensync.ui.UI -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
